# WebControl

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: api-reference.md  architecture.md  deployment.md  integration-guide.md  mcp-tools.md  observability.md  robustness.md
mcp-configs/: README.md  claude-desktop.json
src/webcontrol/: config.py  logging.py  main.py
src/webcontrol/api/: app.py  auth.py  dependencies.py  middleware.py  routes_actions.py  routes_observability.py  routes_search.py  routes_sessions.py
src/webcontrol/core/: action_executor.py  block_detection.py  browser_manager.py  errors.py  navigation_escalation.py  page_parser.py  page_settle.py  retry.py  search_tier.py  service.py  session_manager.py  stealth.py
src/webcontrol/mcp_server/: server.py
src/webcontrol/models/: __init__.py  actions.py  page.py  responses.py  search.py  session.py
src/webcontrol/observability/: __init__.py  activity.py  context.py  network.py  timing.py
tests/: conftest.py
tests/test_api/: test_auth.py  test_extraction.py  test_network_capture.py  test_observability.py  test_routes.py  test_search.py
tests/test_core/: test_block_detection.py  test_navigation_escalation.py  test_network_capture.py  test_page_settle.py
