[project]
name = "webcontrol"
version = "0.1.0"
description = "Headless browser automation service for LLM agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "playwright>=1.48",
    "mcp[cli]>=1.9",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
]

[project.scripts]
webcontrol = "webcontrol.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
